Replace free isnan with std::isnan

isnan from cmath is not a free function, but part of the std namespace.
This worked before, but was changed in in glibc 2.23
https://sourceware.org/bugzilla/show_bug.cgi?id=19439.

BUG=595429
TEST=Chrome compiles with glibc 2.23

Review URL: https://codereview.chromium.org/1853263002

Cr-Commit-Position: refs/heads/master@{#385134}

Former-commit-id: f46ba822df322dc98315eba4493382dc80bfc1c5