chrome/browser/ui/webui/engagement/site_engagement_ui.cc
@@ -55,7 +55,7 @@ class SiteEngagementUIHandlerImpl : public SiteEngagementUIHandler {
                                        double score) override {
     GURL origin_gurl(origin.get());
     if (!origin_gurl.is_valid() || score < 0 ||
-        score > SiteEngagementScore::kMaxPoints || isnan(score)) {
+        score > SiteEngagementScore::kMaxPoints || std::isnan(score)) {
       return;
     }
 
